--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="STYLEPOLO - Tienda Virtual de Polos">
     <meta property="og:description" content="Descubre nuestra colección exclusiva de polos premium">
     <meta property="og:image" content="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?w=1200&h=630&fit=crop">
-    <title>STYLEPOLO - Tienda Virtual de Polos</title>
+    <title>STYLEPOLO - Tienda Virtual de Polos Yoel</title>
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👕</text></svg>">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#f97316">
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-tshirt me-2"></i>STYLEPOLO
+                <i class="fas fa-tshirt me-2"></i>STYLEPOLO Yoel 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
